Add HTML webpack plugin. Change location main files to src folder.

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Toxin-hotel</title>
   </head>
-  <body></body>
+  <body>
+    <header><img class="watermark" src="./styles/watermark.svg" alt="Logo watermark"></header>
+    <main></main>
+  </body>
 </html>
