--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <section class="colors">
         <div class="colors__block block">
           <div class="colors__pattern_dark-shade"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Dark Shade 100%</h2>
             <p class="body-text_bigger">#1F2041</p>
           </div>
@@ -33,35 +33,35 @@
         </div>
         <div class="colors__block block">
           <div class="colors__pattern_dark-shade50"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Dark Shade 50%</h2>
             <p class="body-text_bigger">#1F2041</p>
           </div>
         </div>
         <div class="colors__block block">
           <div class="colors__pattern_dark-shade25"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Dark Shade 25%</h2>
             <p class="body-text_bigger">#1F2041</p>
           </div>
         </div>
         <div class="colors__block block">
           <div class="colors__pattern_dark-shade05"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Dark Shade 5%</h2>
             <p class="body-text_bigger">#1F2041</p>
           </div>
         </div>
         <div class="colors__block block">
           <div class="colors__pattern_purple"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Purple</h2>
             <p class="body-text_bigger">#BC9CFF</p>
           </div>
         </div>
         <div class="colors__block block">
           <div class="colors__pattern_green"></div>
-          <div class="colors-type__name">
+          <div class="colors__name">
             <h2 class="item-title">Green</h2>
             <p class="body-text_bigger">#6FCF97</p>
           </div>
